# bluepill-bcdclock

./: Cargo.toml  rom
circuits/: nixie-clock-cache.lib  nixie-clock.kicad_pcb  nixie-clock.lib  nixie-clock.net  nixie-clock.pro  nixie-clock.sch
circuits/gbrs/: nixie-clock-B.Cu.gbr  nixie-clock-B.Mask.gbr  nixie-clock-B.Paste.gbr  nixie-clock-B.SilkS.gbr  nixie-clock-Edge.Cuts.gbr  nixie-clock-F.Cu.gbr  nixie-clock-F.Mask.gbr  nixie-clock-F.Paste.gbr  nixie-clock-F.SilkS.gbr  nixie-clock-drl_map.gbr
src/: at24c.rs  ds3231.rs  i2c.rs  main.rs  mutex.rs  tim.rs
