[package]
name = "bluepill-bcdclock"
description = "A BCD clock using DS3231"
authors = ["Ted Yin <tederminant@gmail.com>"]
keywords = ["no-std", "arm", "cortex-m", "stm32"]
license = "GPL-3.0"
version = "0.1.0"

[dependencies.stm32f103xx]
features = ["rt"]
version = "0.7.2"

[dependencies.cortex-m-rt]
version = "0.3.5"
features = ["abort-on-panic"]

[dependencies.cortex-m]
version = "0.3.0"

[profile.release]
debug = true
lto = true
